@@ -7,12 +7,12 @@ import java.time.LocalTime;
 import java.time.format.DateTimeFormatter;
 import java.util.Comparator;
 import java.util.Collections;
+import java.util.stream.Collectors;
 import java.util.LinkedHashMap;
 import java.util.List;
 import java.util.Map;
 import java.util.Objects;
 import java.util.UUID;
-import java.util.stream.Collectors;
 
 import org.springframework.security.access.AccessDeniedException;
 import org.springframework.stereotype.Service;
@@ -24,10 +24,8 @@ import lk.sliit.smartcampus.dto.CheckInResponseDTO;
 import lk.sliit.smartcampus.dto.CreateBookingRequest;
 import lk.sliit.smartcampus.dto.ResourceUtilizationAnalyticsDTO;
 import lk.sliit.smartcampus.entity.Booking;
-import lk.sliit.smartcampus.entity.BookingParticipant;
 import lk.sliit.smartcampus.entity.Resource;
 import lk.sliit.smartcampus.entity.User;
-import lk.sliit.smartcampus.repository.BookingParticipantRepository;
 import lk.sliit.smartcampus.repository.BookingRepository;
 import lk.sliit.smartcampus.repository.ResourceRepository;
 import lk.sliit.smartcampus.repository.UserRepository;
@@ -41,7 +39,6 @@ import lombok.RequiredArgsConstructor;
 @Transactional
 public class BookingServiceImpl implements BookingService {
 
-    private final BookingParticipantRepository bookingParticipantRepository;
     private final ResourceRepository resourceRepository;
     private final UserRepository userRepository;
     private final BookingRepository bookingRepository;
@@ -55,12 +52,7 @@ public class BookingServiceImpl implements BookingService {
 
         validateBookingRequest(request, resource);
         validateCreateConflict(request, resource);
-
-        List<Long> cleanParticipantIds = sanitizeParticipantIds(request.getParticipantIds(), bookingOwner.getId());
-        List<User> participants = getUsersByIds(cleanParticipantIds);
-
-        int attendeesCount = 1 + participants.size();
-        validateCapacity(resource, attendeesCount);
+        validateCapacity(resource, request.getAttendeesCount());
 
         Booking booking = Booking.builder()
                 .resource(resource)
@@ -69,21 +61,45 @@ public class BookingServiceImpl implements BookingService {
                 .startTime(request.getStartTime())
                 .endTime(request.getEndTime())
                 .purpose(request.getPurpose())
-                .attendeesCount(attendeesCount)
+                .attendeesCount(request.getAttendeesCount())
                 .status(Booking.BookingStatus.PENDING)
                 .build();
 
         Booking savedBooking = bookingRepository.save(booking);
 
-        List<BookingParticipant> bookingParticipants = participants.stream()
-                .map(user -> BookingParticipant.builder()
-                        .booking(savedBooking)
-                        .user(user)
-                        .build())
-                .toList();
+        return mapToResponse(savedBooking);
+    }
 
-        bookingParticipantRepository.saveAll(bookingParticipants);
-        savedBooking.setParticipants(bookingParticipants);
+    @Override
+    public BookingResponseDTO updateBooking(Long bookingId, CreateBookingRequest request, String userEmail) {
+        Booking booking = getBookingEntityById(bookingId);
+
+        if (!booking.getUser().getEmail().equals(userEmail)) {
+            throw new AccessDeniedException("You are not allowed to edit this booking");
+        }
+
+        if (booking.getStatus() != Booking.BookingStatus.PENDING) {
+            throw new IllegalStateException("Only pending bookings can be edited");
+        }
+
+        if (Boolean.TRUE.equals(booking.getCheckedIn())) {
+            throw new IllegalStateException("Checked-in bookings cannot be edited");
+        }
+
+        Resource resource = getResourceById(request.getResourceId());
+
+        validateBookingRequest(request, resource);
+        validateUpdateConflict(bookingId, request, resource);
+        validateCapacity(resource, request.getAttendeesCount());
+
+        booking.setResource(resource);
+        booking.setBookingDate(request.getBookingDate());
+        booking.setStartTime(request.getStartTime());
+        booking.setEndTime(request.getEndTime());
+        booking.setPurpose(request.getPurpose());
+        booking.setAttendeesCount(request.getAttendeesCount());
+
+        Booking savedBooking = bookingRepository.save(booking);
 
         return mapToResponse(savedBooking);
     }
@@ -118,8 +134,12 @@ public class BookingServiceImpl implements BookingService {
         if (status == null || status.isBlank()) {
             bookings = bookingRepository.findAllByOrderByCreatedAtDesc();
         } else {
-            Booking.BookingStatus bookingStatus = Booking.BookingStatus.valueOf(status.toUpperCase());
-            bookings = bookingRepository.findByStatusOrderByCreatedAtDesc(bookingStatus);
+            try {
+                Booking.BookingStatus bookingStatus = Booking.BookingStatus.valueOf(status.toUpperCase());
+                bookings = bookingRepository.findByStatusOrderByCreatedAtDesc(bookingStatus);
+            } catch (IllegalArgumentException ex) {
+                throw new IllegalArgumentException("Invalid booking status: " + status);
+            }
         }
 
         return bookings.stream()
@@ -143,11 +163,7 @@ public class BookingServiceImpl implements BookingService {
         booking.setQrToken(qrToken);
         booking.setQrGeneratedAt(LocalDateTime.now());
 
-        // force immediate DB write
         Booking savedBooking = bookingRepository.saveAndFlush(booking);
-
-        Booking debugBooking = bookingRepository.findById(bookingId).orElseThrow();
-        System.out.println("DEBUG TOKEN FROM DB: " + debugBooking.getQrToken());
 
         String qrPayload = "BOOKING_TOKEN:" + savedBooking.getQrToken();
         byte[] qrCodeBytes = qrCodeService.generateQrCode(qrPayload, 300, 300);
@@ -157,7 +173,6 @@ public class BookingServiceImpl implements BookingService {
             savedBooking.setQrEmailSentAt(LocalDateTime.now());
             savedBooking = bookingRepository.saveAndFlush(savedBooking);
         } catch (Exception e) {
-            // keep approval and token saved even if email sending fails
             System.err.println("Failed to send booking approval email: " + e.getMessage());
         }
 
@@ -307,7 +322,9 @@ public class BookingServiceImpl implements BookingService {
 
     @Override
     public CheckInResponseDTO checkIn(String qrToken) {
-        Booking booking = bookingRepository.findByQrToken(qrToken)
+        String normalizedToken = normalizeQrToken(qrToken);
+
+        Booking booking = bookingRepository.findByQrToken(normalizedToken)
                 .orElseThrow(() -> new EntityNotFoundException("Invalid QR code"));
 
         if (booking.getStatus() != Booking.BookingStatus.APPROVED) {
@@ -344,6 +361,20 @@ public class BookingServiceImpl implements BookingService {
                 .checkedIn(savedBooking.getCheckedIn())
                 .checkedInAt(savedBooking.getCheckedInAt())
                 .build();
+    }
+
+    private String normalizeQrToken(String qrToken) {
+        if (qrToken == null || qrToken.isBlank()) {
+            throw new IllegalArgumentException("QR token is required");
+        }
+
+        String cleaned = qrToken.trim();
+
+        if (cleaned.startsWith("BOOKING_TOKEN:")) {
+            cleaned = cleaned.substring("BOOKING_TOKEN:".length()).trim();
+        }
+
+        return cleaned;
     }
 
     private void validateBookingRequest(CreateBookingRequest request, Resource resource) {
@@ -395,18 +426,6 @@ public class BookingServiceImpl implements BookingService {
         }
     }
 
-    private List<Long> sanitizeParticipantIds(List<Long> participantIds, Long bookingOwnerId) {
-        if (participantIds == null) {
-            return Collections.emptyList();
-        }
-
-        return participantIds.stream()
-                .filter(Objects::nonNull)
-                .filter(id -> !id.equals(bookingOwnerId))
-                .distinct()
-                .toList();
-    }
-
     private void validateCreateConflict(CreateBookingRequest request, Resource resource) {
         boolean hasConflict = bookingRepository.existsOverlappingBooking(
                 resource.getId(),
@@ -422,18 +441,20 @@ public class BookingServiceImpl implements BookingService {
         }
     }
 
-    private List<User> getUsersByIds(List<Long> ids) {
-        if (ids.isEmpty()) {
-            return Collections.emptyList();
+    private void validateUpdateConflict(Long bookingId, CreateBookingRequest request, Resource resource) {
+        boolean hasConflict = bookingRepository.existsOverlappingBookingExcludingId(
+                bookingId,
+                resource.getId(),
+                request.getBookingDate(),
+                request.getStartTime(),
+                request.getEndTime(),
+                List.of(
+                        Booking.BookingStatus.PENDING,
+                        Booking.BookingStatus.APPROVED));
+
+        if (hasConflict) {
+            throw new IllegalStateException("This resource is already booked for the selected time range");
         }
-
-        List<User> users = userRepository.findAllById(ids);
-
-        if (users.size() != ids.size()) {
-            throw new EntityNotFoundException("One or more participant users were not found");
-        }
-
-        return users;
     }
 
     private User getUserByEmail(String email) {
@@ -452,11 +473,6 @@ public class BookingServiceImpl implements BookingService {
     }
 
     private BookingResponseDTO mapToResponse(Booking booking) {
-        List<Long> participantIds = bookingParticipantRepository.findByBookingId(booking.getId())
-                .stream()
-                .map(bp -> bp.getUser().getId())
-                .collect(Collectors.toList());
-
         return BookingResponseDTO.builder()
                 .id(booking.getId())
                 .resourceId(booking.getResource().getId())
@@ -470,9 +486,11 @@ public class BookingServiceImpl implements BookingService {
                 .attendeesCount(booking.getAttendeesCount())
                 .status(booking.getStatus())
                 .adminReason(booking.getAdminReason())
-                .participantIds(participantIds)
                 .createdAt(booking.getCreatedAt())
                 .updatedAt(booking.getUpdatedAt())
+                .checkedIn(booking.getCheckedIn())
+                .checkedInAt(booking.getCheckedInAt())
+                .qrToken(booking.getQrToken())
                 .build();
     }
 
